--- a/src/assets/sass/commons/header.scss
+++ b/src/assets/sass/commons/header.scss
@@ -39,6 +39,7 @@
 			padding: 0 50px;
 			&:focus{
 				outline: none;
+				text-align: left;
 				-moz-outline-radius: 1.5rem;
 			}
 		}
