--- a/src/assets/sass/commons/products.scss
+++ b/src/assets/sass/commons/products.scss
@@ -46,6 +46,17 @@
 		font-family: 'Montserrat-SemiBold';
 		text-align: left;
 	}
+	@include media-breakpoint-down(sm){
+		.card{
+			.card-footer{
+				flex-direction: column-reverse;
+				align-items: flex-start;
+				.btn{
+					display: none;
+				}
+			}
+		}
+	}
 
 }
 
@@ -59,13 +70,14 @@
 		flex-direction: row;
 		flex-wrap: wrap;
 		.card{
-			width: 20%;
+			width: 33%;
+			flex: inherit;
 		}
 	}
 	@include media-breakpoint-down(md){
 
 		.card{
-			width: 30%;
+			width: 33%;
 		}
 		.products__info{
 			display: flex;
@@ -74,8 +86,11 @@
 		}
 	}
 	@include media-breakpoint-down(sm){
+		grid-template-columns: repeat(2, 1fr);
+		padding: 0 5px;
 		.card{
-			width: 45%;
+			width: 50%;
+			padding: 5px;
 		}
 		.card-title{
 			font-size: 1.5rem;
@@ -95,13 +110,15 @@
 	@include media-breakpoint-down(md){
 		width: 50%;
 	}
+
 }
 .products__info {
 	grid-column: 6 / 8;
 	grid-row: 1 / 3;
 	@include box-shadow;
 	@include media-breakpoint-down(lg){
-		//grid-area: 1 / 5/ 3 / 8;
+		grid-column: 1 / 3;
+		grid-row: 5 / 6;
 	}
 	@include media-breakpoint-down(md){
 		display: flex;
